# evolution-ews

./: .dir-locals.el  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.ac  enumtypes.h.template  evolution-ews.doap  evolution-ews.metainfo.xml.in  gtester.mk  org.gnome.Evolution-ews.metainfo.xml.in  test
src/: CMakeLists.txt  Makefile.am
src/EWS/: CMakeLists.txt
src/EWS/addressbook/: CMakeLists.txt  e-book-backend-ews-factory.c  e-book-backend-ews.c  e-book-backend-ews.h  ews-oab-decoder.c  ews-oab-decoder.h  ews-oab-decompress.c  ews-oab-decompress.h  ews-oab-props.h  gal-lzx-decompress-test.c  oab-decode-test.c
src/EWS/calendar/: CMakeLists.txt  e-cal-backend-ews-factory.c  e-cal-backend-ews-m365.c  e-cal-backend-ews-m365.h  e-cal-backend-ews-utils.c  e-cal-backend-ews-utils.h  e-cal-backend-ews.c  e-cal-backend-ews.h  windowsZones.xml
src/EWS/camel/: CMakeLists.txt  camel-ews-enums.h  camel-ews-folder.c  camel-ews-folder.h  camel-ews-message-info.c  camel-ews-message-info.h  camel-ews-private.h  camel-ews-provider.c  camel-ews-search.c  camel-ews-search.h  camel-ews-store-summary.c  camel-ews-store-summary.h  (+9 more)
src/Microsoft365/: CMakeLists.txt
src/Office365/: CMakeLists.txt
src/account-setup-eplugin/: Makefile.am  ews-plugin-compat.c  ews-plugin-compat.h  exchange-ews-account-listener.c  exchange-ews-account-listener.h  exchange-ews-account-out-of-office.c  exchange-ews-account-out-of-office.h  exchange-ews-account-setup.c  exchange-ews-account-setup.h  exchange-ews-change-password.c  exchange-ews-change-password.h  org-gnome-exchange-ews.eplug.xml
src/addressbook/: CMakeLists.txt  Makefile.am  e-book-backend-ews-factory.c  e-book-backend-ews-gal.c  e-book-backend-ews-gal.h  e-book-backend-ews-utils.c  e-book-backend-ews-utils.h  e-book-backend-ews.c  e-book-backend-ews.h  e-book-backend-sqlitedb-test.c  e-book-backend-sqlitedb.c  e-book-backend-sqlitedb.h  ews-book-backend-sqlitedb-test.c  ews-book-backend-sqlitedb.c  ews-book-backend-sqlitedb.h  ews-oab-decoder.c  ews-oab-decoder.h  ews-oab-decompress.c  ews-oab-decompress.h  ews-oab-props.h  gal-lzx-decompress-test.c  libedata-book-compat.c  libedata-book-compat.h  oab-decode-test.c
src/calendar/: CMakeLists.txt  Makefile.am  e-cal-backend-ews-factory.c  e-cal-backend-ews-factory.h  e-cal-backend-ews-utils.c  e-cal-backend-ews-utils.h  e-cal-backend-ews.c  e-cal-backend-ews.h  libedata-cal-compat.c  libedata-cal-compat.h  windowsZones.xml
src/camel/: CMakeLists.txt  Makefile.am  README  camel-ews-enums.h  camel-ews-folder.c  camel-ews-folder.h  camel-ews-journal.c  camel-ews-journal.h  camel-ews-message-info.c  camel-ews-message-info.h  camel-ews-private.h  camel-ews-provider.c  camel-ews-search.c  camel-ews-search.h  camel-ews-settings.c  camel-ews-settings.h  camel-ews-store-summary.c  camel-ews-store-summary.h  camel-ews-store.c  camel-ews-store.h  camel-ews-summary.c  camel-ews-summary.h  camel-ews-transport.c  camel-ews-transport.h  camel-ews-utils.c  camel-ews-utils.h
src/collection/: CMakeLists.txt  Makefile.am  e-ews-backend-factory.c  e-ews-backend-factory.h  e-ews-backend.c  e-ews-backend.h  module-ews-backend.c
src/common/: CMakeLists.txt  e-ews-common-utils.c  e-ews-common-utils.h  e-ms-oapxbc-util.c  e-ms-oapxbc-util.h
src/configuration/: CMakeLists.txt  Makefile.am  e-book-config-ews.c  e-book-config-ews.h  e-cal-config-ews.c  e-cal-config-ews.h  e-ews-config-lookup.c  e-ews-config-lookup.h  e-ews-config-ui-extension.c  e-ews-config-ui-extension.h  e-ews-config-utils.c  e-ews-config-utils.h  e-ews-edit-folder-permissions.c  e-ews-edit-folder-permissions.h  e-ews-ooo-notificator.c  e-ews-ooo-notificator.h  e-ews-photo-source.c  e-ews-photo-source.h  e-ews-search-user.c  e-ews-search-user.h  e-ews-subscribe-foreign-folder.c  e-ews-subscribe-foreign-folder.h  e-mail-config-ews-autodiscover.c  e-mail-config-ews-autodiscover.h  e-mail-config-ews-backend.c  e-mail-config-ews-backend.h  e-mail-config-ews-delegates-page.c  e-mail-config-ews-delegates-page.h  e-mail-config-ews-folder-sizes-page.c  e-mail-config-ews-folder-sizes-page.h  e-mail-config-ews-gal.c  e-mail-config-ews-notebook.c  e-mail-config-ews-notebook.h  e-mail-config-ews-oal-combo-box.c  e-mail-config-ews-oal-combo-box.h  e-mail-config-ews-offline-options.c  e-mail-config-ews-offline-options.h  e-mail-config-ews-ooo-page.c  e-mail-config-ews-ooo-page.h  module-ews-configuration.c  (+1 more)
src/modules/: Makefile.am  e-mail-config-ews-backend.c  e-mail-config-ews-backend.h  e-mail-config-ews-gal.c  e-mail-config-ews-gal.h  e-mail-config-ews-oal-combo-box.h  e-mail-config-ews-ooo-page.c  e-mail-config-ews-ooo-page.h  module-ews-backend.c  module-ews-mail-config.c
src/server/: CMakeLists.txt  Makefile.am  README  camel-ews-settings.c  camel-ews-settings.h  camel-sasl-xoauth2-office365.c  camel-sasl-xoauth2-office365.h  create-account.c  e-ews-calendar-utils.c  e-ews-calendar-utils.h  e-ews-camel-common.c  e-ews-camel-common.h  e-ews-compat.h  e-ews-connection-utils.c  e-ews-connection-utils.h  e-ews-connection.c  e-ews-connection.h  e-ews-container.c  e-ews-container.h  e-ews-context.c  e-ews-context.h  e-ews-create-folder-operation.c  e-ews-create-folder-operation.h  e-ews-debug.c  e-ews-debug.h  e-ews-delete-folder-operation.c  e-ews-delete-folder-operation.h  e-ews-enums.h  e-ews-enumtypes.c.template  e-ews-enumtypes.h.template  e-ews-filter.c  e-ews-filter.h  e-ews-folder.c  e-ews-folder.h  e-ews-http-utils.h  e-ews-item-change.c  e-ews-item-change.h  e-ews-item.c  e-ews-item.h  e-ews-message.c  (+86 more)
src/tests/: Makefile.am  ews-test-camel.c  ews-test-common.h
src/utils/: Makefile.am  camel-ews-settings.c  camel-ews-settings.h  e-ews-query-to-restriction.c  e-ews-query-to-restriction.h  e-sqlite3-vfs.c  e-sqlite3-vfs.h  ews-camel-common.c  ews-camel-common.h  ews-camel-compat.c  ews-camel-compat.h  ews-esource-utils.c  ews-esource-utils.h  ews-test-finditem-query.c
tests/: CMakeLists.txt  Makefile.am  ews-test-camel.c  ews-test-common.c  ews-test-common.h  ews-test-timezones.c
(+347 files in other folders)
